--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -1,13 +1,31 @@
 function initialize() { 
   google.maps.visualRefresh = true;
 
-  var inputs = ['19.687166, 105.501166', '16.238333333, 107.989166667', '16.375666667, 107.719333333', '11.933666667, 108.16'];
-  var Place = function(latLng) {
-    this.latLng = latLng;
+  var inputs = [
+    {
+      lat: 19.687166, 
+      lng: 105.501166
+    },
+    {
+      lat: 16.238333333, 
+      lng: 107.989166667
+    },
+    {
+      lat: 16.375666667, 
+      lng: 107.719333333 
+    },
+    {
+      lat: 11.933666667, 
+      lng: 108.16
+    }
+  ];
+
+  function Place(lat, lng) {
+    this.latLng = new google.maps.LatLng(lat, lng);
   }
   var places = [];
-  for(var i=0; i < inputs.length; i++) {
-    places.push( new Place(inputs[i]) );
+  for(i in inputs) {
+    places.push( new Place(inputs[i].lat, inputs[i].lng) );
   }
   var origin = places[0].latLng;
   var destination = places[places.length - 1].latLng;
@@ -61,6 +79,12 @@ function initialize() {
     travelMode: travelMode
   }, function(result, status) {
     renderer.setDirections(result);
+  });
+
+  var currentPlace = places[0];
+
+  $(window).on('scroll', function(event){
+    map.panTo(places[1].latLng);
   });
 }
 
