put instagram fetch in instagram controllers

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @trip.name %></h1>
-<p><a href="/instagram/connect">Connect with Instagram</a></p>
+<p><a href="/instagram/connect">Fetch Photos From Instagram</a></p>
 
 <% if @photos %>
   <% @photos.each do |photo|%>
