--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -9,7 +9,7 @@
   <% if @photos %>
     <% process_photos(@photos).each_with_index do |photo|%>
       <div class="slide">
-        <div class="photo-container" data-map-index="<%= photo.map_index %>">
+        <div class="photo-container" data-map-index="<%= photo.map_index %>" data-lat="<%= photo.lat %>" data-lng="<%= photo.long %>">
           <img src="<%= photo.url %>" ><br>
         </div>
         <div class="caption"></div>
