--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -1,24 +1,32 @@
-function initialize() { 
+function initialize(inputs) { 
   google.maps.visualRefresh = true;
 
-  var inputs = [
-    {
-      lat: 19.687166, 
-      lng: 105.501166
-    },
-    {
-      lat: 16.238333333, 
-      lng: 107.989166667
-    },
-    {
-      lat: 16.375666667, 
-      lng: 107.719333333 
-    },
-    {
-      lat: 11.933666667, 
-      lng: 108.16
-    }
-  ];
+  // var inputs = [
+  //   {
+  //     lat: 19.687166, 
+  //     lng: 105.501166
+  //   },
+  //   {
+  //     lat: 18.681781,
+  //     lng: 105.671997
+  //   },
+  //   {
+  //     lat: 18.351695,
+  //     lng: 105.882111
+  //   },
+  //   {
+  //     lat: 16.375666667, 
+  //     lng: 107.719333333 
+  //   },
+  //   {
+  //     lat: 16.238333333, 
+  //     lng: 107.989166667
+  //   },
+  //   {
+  //     lat: 11.933666667, 
+  //     lng: 108.16
+  //   }
+  // ];
 
   function Place(lat, lng) {
     this.latLng = new google.maps.LatLng(lat, lng);
@@ -111,6 +119,27 @@ function loadScript() {
   script.type = "text/javascript";
   script.src = "http://maps.googleapis.com/maps/api/js?key=<%= ENV['GMAP_KEY'] %>&sensor=false&callback=initialize";
   document.body.appendChild(script);
+  readPhotos();
+}
+
+function readPhotos() {
+  $photoContainers = $('.photo-container');
+  var coords = [];
+  for (var i = 0; i < $photoContainers.length; i++) {
+    $div = $($photoContainers[i]);
+
+    if ($div.data('map-index') || $div.data('map-index') == "0") {
+      var endCoord = {
+        lat: $div.data('lat'),
+        lng: $div.data('lng')
+      };
+
+      coords.push (endCoord);
+    }
+  }
+
+  debugger;
+  initialize(coords);
 }
 
 $(document).ready(function() {
