--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -1,32 +1,60 @@
 function initialize(inputs) { 
   google.maps.visualRefresh = true;
 
-  // var inputs = [
-  //   {
-  //     lat: 19.687166, 
-  //     lng: 105.501166
-  //   },
-  //   {
-  //     lat: 18.681781,
-  //     lng: 105.671997
-  //   },
-  //   {
-  //     lat: 18.351695,
-  //     lng: 105.882111
-  //   },
-  //   {
-  //     lat: 16.375666667, 
-  //     lng: 107.719333333 
-  //   },
-  //   {
-  //     lat: 16.238333333, 
-  //     lng: 107.989166667
-  //   },
-  //   {
-  //     lat: 11.933666667, 
-  //     lng: 108.16
-  //   }
-  // ];
+  var inputs = [
+    {
+      lat: 19.687166, 
+      lng: 105.501166
+    },
+    {
+      lat: 18.681781,
+      lng: 105.671997
+    },
+    {
+      lat: 18.351695,
+      lng: 105.882111
+    },
+    {
+      lat: 16.375666667, 
+      lng: 107.719333333 
+    },
+    {
+      lat: 16.238333333, 
+      lng: 107.989166667
+    },
+    {
+      lat: 11.933666667, 
+      lng: 108.16
+    },
+    {
+      lat: 19.687166, 
+      lng: 105.501166
+    },
+    {
+      lat: 18.681781,
+      lng: 105.671997
+    },
+    {
+      lat: 18.351695,
+      lng: 105.882111
+    },
+    {
+      lat: 16.375666667, 
+      lng: 107.719333333 
+    },
+    {
+      lat: 18.681781,
+      lng: 105.671997
+    },
+    {
+      lat: 18.351695,
+      lng: 105.882111
+    },
+    {
+      lat: 16.375666667, 
+      lng: 107.719333333 
+    }
+  ];
 
   function Place(lat, lng) {
     this.latLng = new google.maps.LatLng(lat, lng);
@@ -35,12 +63,14 @@ function initialize(inputs) {
   for(i in inputs) {
     places.push( new Place(inputs[i].lat, inputs[i].lng) );
   }
+  console.log(places);
   var origin = places[0].latLng;
   var destination = places[places.length - 1].latLng;
   var waypoints = [];
-  for(var i=1; i < places.length - 1; i++) {
+  for(var i=1; i < places.length - 1 && i <= 8 ; i++) {
     waypoints.push( { location: places[i].latLng, stopover: true } );
   }
+  console.log(waypoints);
 
   var mapType = google.maps.MapTypeId.ROADMAP;
   var travelMode = google.maps.TravelMode.DRIVING;
@@ -117,9 +147,8 @@ function initialize(inputs) {
 function loadScript() {
   var script = document.createElement("script");
   script.type = "text/javascript";
-  script.src = "http://maps.googleapis.com/maps/api/js?key=<%= ENV['GMAP_KEY'] %>&sensor=false&callback=initialize";
+  script.src = "http://maps.googleapis.com/maps/api/js?key=<%= ENV['GMAP_KEY'] %>&sensor=false&callback=readPhotos";
   document.body.appendChild(script);
-  readPhotos();
 }
 
 function readPhotos() {
@@ -130,15 +159,14 @@ function readPhotos() {
 
     if ($div.data('map-index') || $div.data('map-index') == "0") {
       var endCoord = {
-        lat: $div.data('lat'),
-        lng: $div.data('lng')
+        lat: +$div.data('lat'),
+        lng: +$div.data('lng')
       };
 
-      coords.push (endCoord);
+      coords.push(endCoord);
     }
   }
 
-  debugger;
   initialize(coords);
 }
 
