--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -9,6 +9,7 @@
 
 <script>
   $(function() {
-    $( ".datepicker" ).datepicker({ dateFormat: 'dd mm yyyy' });
+    $( ".datepicker" ).datepicker({ dateFormat: "dd mm yy"});
+
   });
 </script>
