changed instagram to use get requests

--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -9,7 +9,7 @@
 
 <script>
   $(function() {
-    $( ".datepicker" ).datepicker({ dateFormat: "dd mm yy"});
+    $( ".datepicker" ).datepicker({dateFormat:'yy-mm-dd'});
 
   });
 </script>
