--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -1,91 +1,131 @@
-function initialize(inputs) { 
+var Place = function(lat, lng) {
+  this.latLng = new google.maps.LatLng(lat, lng);
+};
+
+// var Worker = function() {
+//   this.queue = [];
+//   this.running = false;
+// };
+
+// Worker.prototype.addRoute = function(places) {
+//   this.queue.push(places);
+//   if (!this.running) {
+//     this.running = true;
+//     this.poll();
+//   }
+// };
+
+// Worker.prototype.process = function(places) {
+//   addRoute(places);
+// };
+
+// Worker.prototype.poll = function() {
+//   if (this.queue.length > 0) {
+//     this.process(queue.shift());
+//     setTimeout(this.poll, 200);
+//   } else {
+//     this.running = false;
+//   }
+// };
+
+var SlowWorker = {
+  queue: [],
+
+  running: false,
+
+  enqueueAddRoute: function(places) {
+    // console.log('SlowWorker.enqueueAddRoute');
+    this.queue.push(places);
+    if (!this.running) {
+      this.running = true;
+      setTimeout(this.poll, 10);
+    }
+  },
+
+  process: function(places) {
+    // console.log('SlowWorker.process');
+    if (places.length > 10) {
+      throw 'too many waypoints'
+    }
+
+    var origin = places[0].latLng;
+    var destination = places[places.length - 1].latLng;
+    var waypoints = [];
+
+    for(var i=1; i < places.length - 1; i++) {
+      waypoints.push( { location: places[i].latLng, stopover: true } );
+    }
+
+    var router = new google.maps.DirectionsService();
+    var routeOptions = {
+      origin: origin,
+      destination: destination,
+      waypoints: waypoints,
+      travelMode: google.maps.TravelMode.DRIVING
+    };
+
+    lastPlaces = places;
+    router.route(routeOptions, this.handleResult);
+  },
+
+  poll: function() {
+    // console.log('SlowWorker.poll');
+    if (SlowWorker.queue.length > 0) {
+      SlowWorker.process(SlowWorker.queue[0]);
+    } else {
+      SlowWorker.running = false;
+    }
+  },
+
+  handleResult: function(result, status) {
+    var resultPlaces = SlowWorker.queue.shift();
+
+    if (SlowWorker.running) {
+      setTimeout(SlowWorker.poll, 200);
+    }
+
+    if(status == google.maps.DirectionsStatus.OK) {
+      renderRoute(result);
+    } else {
+      console.log(status);
+      drawPolyLine(resultPlaces);
+    }
+  }
+};
+
+var initialize = function(inputs) { 
   google.maps.visualRefresh = true;
 
-  // var inputs = [
-  //   {
-  //     lat: 19.687166, 
-  //     lng: 105.501166
-  //   },
-  //   {
-  //     lat: 18.681781,
-  //     lng: 105.671997
-  //   },
-  //   {
-  //     lat: 18.351695,
-  //     lng: 105.882111
-  //   },
-  //   {
-  //     lat: 16.375666667, 
-  //     lng: 107.719333333 
-  //   },
-  //   {
-  //     lat: 16.238333333, 
-  //     lng: 107.989166667
-  //   },
-  //   {
-  //     lat: 11.933666667, 
-  //     lng: 108.16
-  //   },
-  //   {
-  //     lat: 19.687166, 
-  //     lng: 105.501166
-  //   },
-  //   {
-  //     lat: 18.681781,
-  //     lng: 105.671997
-  //   },
-  //   {
-  //     lat: 18.351695,
-  //     lng: 105.882111
-  //   },
-  //   {
-  //     lat: 16.375666667, 
-  //     lng: 107.719333333 
-  //   },
-  //   {
-  //     lat: 18.681781,
-  //     lng: 105.671997
-  //   },
-  //   {
-  //     lat: 18.351695,
-  //     lng: 105.882111
-  //   },
-  //   {
-  //     lat: 16.375666667, 
-  //     lng: 107.719333333 
-  //   }
-  // ];
+  map = buildMap();
+  // renderer = buildRenderer();
+  // renderer.setMap(map);
 
-  function Place(lat, lng) {
-    this.latLng = new google.maps.LatLng(lat, lng);
+  var places = buildPlaces(inputs);
+
+  console.log(places);
+
+  for(var i=0;i<places.length;i++) {
+    if(i > 0 && i < places.length) {
+      SlowWorker.enqueueAddRoute([places[i-1], places[i]])
+    }
   }
+
+  // var currentIndex = 0;
+  // var deaccelerator = 0;
+};
+
+var buildPlaces = function(inputs) {
   var places = [];
+
   for(i in inputs) {
     places.push( new Place(inputs[i].lat, inputs[i].lng) );
   }
-  // var origin = places[7].latLng;
-  // var destination = places[10].latLng;
-  // var waypoints = [];
-  // for(var i=8; i < places.length - 1 && i <= 9 ; i++) {
-  //   waypoints.push( { location: places[i].latLng, stopover: true } );
-  // }
-  var bounds = new google.maps.LatLngBounds();
-  var coords = [];
-  var points = [];
-  // var iconSequence = [];
-  // var icon = {
-  //   path: google.maps.SymbolPath.CIRCLE
-  // };
-  for(i in places) {
-    points.push( new google.maps.Point(inputs[i].lng, inputs[i].lat) );
-    coords.push( places[i].latLng );
-    bounds.extend( places[i].latLng );
-    // iconSequence.push({icon: icon});
-  }
 
+  return places;
+};
+
+var buildMap = function() {
   var mapType = google.maps.MapTypeId.ROADMAP;
-  var travelMode = google.maps.TravelMode.DRIVING;
-
   var styles = [
     {
       stylers: [
@@ -94,10 +134,10 @@ function initialize(inputs) {
       ]
     }
   ];
-  var elemId = "map-canvas";
+
   var mapOptions = { 
-    center: coords[0],
-    zoom: 2,
+    // center: coords[0],
+    // zoom: 2,
     mapTypeId: mapType,
     styles: styles,
     disableDoubleClickZoom: true,
@@ -109,76 +149,41 @@ function initialize(inputs) {
     streetViewControl: true,
     zoomControl: true
   };
-  map = new google.maps.Map(document.getElementById(elemId), mapOptions);
-  console.log(coords);
-  // var renderer = new google.maps.DirectionsRenderer({
-  //   draggable: true, // double check that we actually want this turned on
-  //   markerOptions: { 
-  //     visible: true
-  //   },
-  //   polylineOptions: {
-  //     strokeColor: "#000000",
-  //     strokeWeight: 3
-  //   }
-  // });
-  // renderer.setMap(map);
-  // var router = new google.maps.DirectionsService();
-  // router.route({
-  //   origin: origin,
-  //   destination: destination,
-  //   waypoints: waypoints,
-  //   travelMode: travelMode
-  // }, function(result, status) {
-  //   renderer.setDirections(result);
-  // });
 
+  return new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+};
 
-  map.fitBounds(bounds);
-  var polyline = new google.maps.Polyline({
-    path: coords,
-    strokeColor: "#000000",
-    strokeWeight: 3,
-    geodesic: false,
-    // icons: iconSequence
-  });
+var buildRenderer = function() {
+  rendererOptions = {
+    draggable: true, // double check that we actually want this turned on
+    markerOptions: { 
+      visible: true
+    },
+    polylineOptions: {
+      strokeColor: "#000000",
+      strokeWeight: 3
+    }
+  };
 
-  polyline.setMap(map);
+  return new google.maps.DirectionsRenderer(rendererOptions);
+};
 
-  var currentIndex = 0;
-  var deaccelerator = 0;
+var renderRoute = function(result) {
+  var renderer = buildRenderer();
+  renderer.setMap(map);
+  renderer.setDirections(result);
+};
 
-  for (i in places) {
+var drawPolyLine = function(places) {
+  polylineOptions = {
+      strokeColor: "#000000",
+      strokeWeight: 3,
+      map: map,
+      path: [places[0].latLng, places[1].latLng]
+  };
 
-    var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
-
-    var marker = new google.maps.Marker({
-        position: places[i].latLng,
-        // icon: 'star-on-map.png',
-        map: map
-    });
-  }
-
-  // $(window).on('scroll', function(event){
-  //   // map.panBy(0, $(window).scrollTop() / 4);
-  //   if(deaccelerator > 2){
-  //     var distance = 0;
-  //     if(currentIndex < places.length-1) {
-  //       distance = google.maps.geometry.spherical.computeDistanceBetween(places[currentIndex].latLng, places[currentIndex + 1].latLng);
-  //     } else { 
-  //       distance = google.maps.geometry.spherical.computeDistanceBetween(places[currentIndex].latLng, places[0].latLng);
-  //     }
-  //     if(currentIndex >= places.length - 1){
-  //       currentIndex = 0;
-  //     } else {
-  //       currentIndex += 1;
-  //     }
-  //     map.panTo(places[currentIndex].latLng);
-  //     deaccelerator = 0;
-  //   } else {
-  //     deaccelerator += 1;
-  //   }
-  // });
-}
+  new google.maps.Polyline(polylineOptions);
+};
 
 function loadScript() {
   var script = document.createElement("script");
