--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,1 +1,5 @@
 <h1>Welcome to Journey Tracker</h1>
+
+<h2><%= link_to "Create a Trip!", new_trip_path %></h2>
+<p><%= link_to "Or check out all trips", trips_path  %></p>
+
