implement getPixelPos(lat, lng)

--- a/app/assets/stylesheets/photos.css
+++ b/app/assets/stylesheets/photos.css
@@ -28,7 +28,7 @@ body {
   -webkit-box-shadow: 0 0 19px rgba(0,0,0,0.5);
   -moz-box-shadow: 0 0 19px rgba(0,0,0,0.5);
   box-shadow: 0 0 19px rgba(0,0,0,0.5);
-  display: none;
+  /*display: none;*/
 }
 
 .photo {
