--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -5,6 +5,25 @@ var gmap = {
 
   projection: null,
 
+  buildOverlay: function() {
+    console.log('gmap.buildOverlay')
+    var overlay = new google.maps.OverlayView();
+    overlay.setMap(this.map);
+    overlay.draw = function () { 
+      if (!this.ready) { 
+          this.ready = true; 
+          google.maps.event.trigger(this, 'ready');
+      } 
+      google.maps.event.trigger(gmap.overlayReady, 'ready');
+    };
+    console.log(overlay);
+    return overlay;
+  },
+
+  overlayReady: function() {
+    alert('OMFG');
+  },
+
   SlowWorker: {
     queue: [],
 
@@ -55,6 +74,7 @@ var gmap = {
     },
 
     handleResult: function(result, status) {
+      // console.log('SlowWorker.handleResult');
       var resultPlaces = gmap.SlowWorker.queue.shift();
 
       if (gmap.SlowWorker.running) {
@@ -63,26 +83,15 @@ var gmap = {
 
       if(status == google.maps.DirectionsStatus.OK) {
         gmap.renderRoute(result);
-        var overlay = new google.maps.OverlayView();
-        overlay.setMap(map);
-        overlay.draw = function () { 
-          if (!this.ready) { 
-              this.ready = true; 
-              google.maps.event.trigger(this, 'ready'); 
-          } 
-        };
-        console.log(overlay);
-        var projection = overlay.getProjection();
-        console.log(projection);
-        var pxlocation = projection.fromLatLngToContainerPixel(
-          resultPlaces[0]
-        );
-        console.log(pxlocation)
       } else {
-        console.log(status);
+        console.log('getting route failed with status: ' + status);
         gmap.drawPolyLine(resultPlaces);
       }
     }
+  },
+
+  buildLatLng: function(lat, lng) {
+    return new google.maps.LatLng(lat, lng); 
   },
 
   buildPlaces: function(inputs) {
@@ -98,31 +107,31 @@ var gmap = {
     return places;
   },
 
-  initialize: function(inputs) { 
+  initialize: function(inputs) {
+    console.log('gmap.initialize');
     google.maps.visualRefresh = true;
 
     this.map = this.buildMap();
+    this.overlay = this.buildOverlay();
+    // this.projection = this.buildProjection();
+    this.projection = this.overlay.getProjection();
+    console.log(this.overlay);
+    console.log(this.projection);
+
+
+    mapReady();
 
     // renderer = buildRenderer();
     // renderer.setMap(map);
 
-    var places = this.buildPlaces(inputs);
-
-    console.log(places);
-
-    for(var i=0;i<places.length;i++) {
-      if(i > 0 && i < places.length) {
-        this.SlowWorker.enqueueAddRoute(
-          [places[i-1], places[i]]
-        );
-      }
-    }
+    
 
     // var currentIndex = 0;
     // var deaccelerator = 0;
   },
 
   buildMap: function() {
+    console.log('gmap.buildMap');
     var mapType = google.maps.MapTypeId.ROADMAP;
     var styles = [
       {
@@ -170,7 +179,7 @@ var gmap = {
 
   renderRoute: function(result) {
     var renderer = this.buildRenderer();
-    renderer.setMap(map);
+    renderer.setMap(this.map);
     renderer.setDirections(result);
   },
 
@@ -178,7 +187,7 @@ var gmap = {
     polylineOptions = {
         strokeColor: "#000000",
         strokeWeight: 3,
-        map: map,
+        map: this.map,
         path: [places[0], places[1]]
     };
 
@@ -189,34 +198,80 @@ var gmap = {
     var script = document.createElement("script");
     script.type = "text/javascript";
     console.log("<%= ENV['GMAP_KEY'] %>")
-    script.src = "http://maps.googleapis.com/maps/api/js?key=<%= ENV['GMAP_KEY'] %>&sensor=false&callback=gmap.readPhotos";
+    script.src = "http://maps.googleapis.com/maps/api/js?key=<%= ENV['GMAP_KEY'] %>&sensor=false&callback=gmap.mapLoaded";
     document.body.appendChild(script);
   },
 
-  readPhotos: function() {
-    $photoContainers = $('.photo-container');
-    var coords = [];
-    for (var i = 0; i < $photoContainers.length; i++) {
-      $div = $($photoContainers[i]);
-
-      if ($div.data('map-index') || $div.data('map-index') == "0") {
-        var endCoord = {
-          lat: +$div.data('lat'),
-          lng: +$div.data('lng')
-        };
-
-        coords.push(endCoord);
-      }
-    }
-
-    this.initialize(coords);
+  mapLoaded: function() {
+    console.log('gmap.mapLoaded')
+    this.initialize();
   },
 
   getPixelPos: function(lat, lng) {
+    var pxlocation = projection.fromLatLngToContainerPixel(
+      new google.maps.LatLng(
+          lat, lng
+        )
+    );
+    return pxlocation;
+  },
 
+  getPixelPositions: function(coords) {
+    pxlocations = [];
+    for (i in coords) {
+      pxlocations.push(
+        this.getPixelPos(this.projection, coords[i].lat, coords[i].lng)
+      );
+    }
+    return pxlocations;
+  },
+
+  drawRoute: function(coords) {
+    console.log('gmap.drawRoute');
+    places = [];
+    for (i in coords) {
+      places.push(
+        new google.maps.LatLng(
+          coords[i].lat, coords[i].lng
+        )
+      );
+    }
+
+    this.SlowWorker.enqueueAddRoute(places);
   }
 
 }
+
+var mapReady = function() {
+  console.log('mapReady');
+
+  var photoCoords = readPhotosCoords();
+
+  for(i in photoCoords) {
+    if (i > 0) {
+      gmap.drawRoute([photoCoords[i-1], photoCoords[i]])
+    }
+  }
+};
+
+var readPhotosCoords = function() {
+  $photoContainers = $('.photo-container');
+  var coords = [];
+  for (var i = 0; i < $photoContainers.length; i++) {
+    $div = $($photoContainers[i]);
+
+    if ($div.data('map-index') || $div.data('map-index') == "0") {
+      var endCoord = {
+        lat: +$div.data('lat'),
+        lng: +$div.data('lng')
+      };
+
+      coords.push(endCoord);
+    }
+  }
+
+  return coords;
+};
 
 $(document).ready(function() {
   gmap.loadScript();
