added edit and delete trip and a header

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Welcome to Journey Tracker</h1>
-
+<% if @user %>
 <h2><%= link_to "Create a Trip!", new_trip_path %></h2>
 <p><%= link_to "Or check out all trips", trips_path  %></p>
+<p><%= link_to "Or check out all users", users_path  %></p>
+<% else %>
+<%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+<% end %>
 
