--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,14 @@
 <body>
 
 <div id="user_nav">
+  <span id='nav_span'>
+    <span id='title_link'><%= link_to 'Viagg.io', root_url %></span>
   <% if @user %>
-    Signed in as <strong><%= @user.name %></strong>!
-    <%= link_to "Sign out", signout_path, id: "sign_out" %>
-  <% else %>
-    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+    <span id='username_link'>Signed in as <%=link_to @user.name, user_path(@user) %>!
+    <%= link_to "Sign out", signout_path, id: "sign_out" %></span>
+  
   <% end %>
+  </span>
 </div>
 
 <%= yield %>
