--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,9 @@
-<h1>Welcome to the profile of <%= @user_on_page.name %></h1>
 <% if @user == @user_on_page %>
+<h1>My Profile</h1>
 <h2>Check out my Trips:</h2>
 <%= link_to 'Create a Trip', new_trip_path %>
 <% else %>
+<h1>Welcome to the profile of <%= @user_on_page.name %></h1>
 <h2>Check out <%= @user_on_page.name %>'s Trips:</h2>
 <% end %>
 <ul>
