--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -3,12 +3,16 @@
 <p><a href="/facebook/connect">Fetch Photos From Facebook</a></p>
 
 
-Removed map for simplicity
+<div class="map-wrapper">
+  <div id="map-canvas"></div>
+</div>
 
-<div>
+<div class="photos-wrapper">
   <% if @photos %>
     <% process_photos(@photos).each_with_index do |photo|%>
+      <div class="photo-container" data-lat="<%= photo.lat %>" data-lng="<%= photo.long %>">
           <img src="<%= photo.url %>" ><br>
+      </div>
     <% end %>
   <% end %>
 </div>
