--- a/app/assets/stylesheets/photos.css
+++ b/app/assets/stylesheets/photos.css
@@ -15,10 +15,15 @@ body {
   stroke-width: 1.5px;
 }
 
+.photos-wrapper {
+  width: 500px;
+  margin: 0 50px;
+}
+
 .photo-container {
   width: 500px;
   z-index: 1000;
-  margin: 50px;
+  margin: 50px 0;
   background-image: -webkit-gradient(linear, center top, center bottom, from(#fcfcfc), to(#bfbfbf), color-stop(3%, #f7f7f7), color-stop(12%, #f2f2f2), color-stop(90%, #d9d9d9));
   background-image: -webkit-linear-gradient(top, #fcfcfc, #f7f7f7 3%, #f2f2f2 12%, #d9d9d9 90%, #bfbfbf);
   background-image: -moz-linear-gradient(top, #fcfcfc, #f7f7f7 3%, #f2f2f2 12%, #d9d9d9 90%, #bfbfbf);
@@ -44,6 +49,7 @@ body {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   pointer-events: none;
+  z-index: 2000;
 }
 
 html { 
@@ -59,10 +65,12 @@ body {
 .map-wrapper {
   height: 100%; 
   width: 100%;
-  margin-top: -50px;
+  /*margin-top: -50px;*/
   /*left: 600px;*/
   position: fixed;
-  z-index: 2000;
+  top: 0;
+  left: 0;
+  z-index: -2000;
 }
 
 #map-canvas {
