--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,13 +1,15 @@
-<h1>All Trips!</h1>
+<div class="container">
+	<h1>All Trips!</h1>
 
-<%= link_to "Create New Trip", new_trip_path %>
+	<%= link_to "Create New Trip", new_trip_path %>
 
 
-<% if @trips %>
-<ul>
-	<% @trips.each do |trip| %>
-		<li><%= link_to trip.name, trip_path(trip) %></li>
+	<% if @trips %>
+	<ul>
+		<% @trips.each do |trip| %>
+			<li><%= link_to trip.name, trip_path(trip) %></li>
+		<% end %>
+	</ul>
+
 	<% end %>
-</ul>
-
-<% end %>
+</div>
