--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,15 +1,13 @@
-<h1>Create new trip</h1>
-<%= form_for @trip do |f| %>
-	<%= f.text_field :name %>
-  <%= f.text_field :start, :class => 'datepicker'  %>
-  <%= f.text_field :end, :class => 'datepicker'  %>
-	<%= f.submit %>
-<% end %>
+<div class="container">
+	<h1>Create new trip</h1>
+	<%= form_for @trip do |f| %>
+		<%= f.label :name %>
+		<%= f.text_field :name %>
+		<%= f.label :start  %>
+	  <%= f.text_field :start, :class => 'datepicker'  %>
+	  <%= f.label :end  %>
+	  <%= f.text_field :end, :class => 'datepicker'  %>
+		<%= f.submit %>
+	<% end %>
 
-
-<script>
-  $(function() {
-    $( ".datepicker" ).datepicker({dateFormat:'yy-mm-dd'});
-
-  });
-</script>
+</div>
