--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
-<h1>All Users:</h1>
-<ul>
-	<% @users.each do |user| %>
-		<li><%= link_to user.name, user_path(user) %></li>
-	<% end %>
-</ul>
+<div class="container">
+	<h1>All Users:</h1>
+	<ul>
+		<% @users.each do |user| %>
+			<li><%= link_to user.name, user_path(user) %></li>
+		<% end %>
+	</ul>
+</div>
